welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:5: error: '=>' expected but '=' found.
		case (a+b) = 10 => true
                           ^